# rust_snake

./: Cargo.toml  README.md
src/: main.rs
src/game/: mod.rs
src/game/food/: mod.rs
src/game/snake/: mod.rs
