[package]
name = "rust_snake"
version = "0.1.0"
authors = ["Alejandro Ríos Jasso <jassoalex97@hotmail.com>"]
edition = "2018"
description = "Snake game made in Rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.52.1"
piston2d-graphics = "0.39.0"
piston_window = "0.117.0"
piston2d-opengl_graphics = "0.77.0"
rand = "0.8.3"